force-app/main/default/objects/Res_study__c/Res_study__c.object-meta.xml
<CustomObject>
    <label>Study Resource</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Res-study Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Res-study</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>