force-app/main/default/objects/Res_study__c/fields/Active_On_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_On_Status__c</fullName>
    <label>Active On Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>