force-app/main/default/objects/Res_study__c/fields/Expires_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Expires_After_Days__c</fullName>
    <label>Expires After Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>