force-app/main/default/objects/Res_study__c/fields/Expires_On_Status__c.field-meta.xml
<CustomField>
    <fullName>Expires_On_Status__c</fullName>
    <label>Expires On Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Participant_Statuses</valueSetName>
    </valueSet>
</CustomField>