force-app/main/default/objects/Res_study__c/fields/Visible_To_RP__c.field-meta.xml
<CustomField>
    <fullName>Visible_To_RP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible To RP</label>
    <type>Checkbox</type>
</CustomField>