force-app/main/default/objects/Res_study__c/recordTypes/Study_Resource.recordType-meta.xml
<RecordType>
    <fullName>Study_Resource</fullName>
    <active>true</active>
    <label>Study Resource</label>
</RecordType>