force-app/main/default/objects/Res_study__c/validationRules/StudySpec_required.validationRule-meta.xml
<ValidationRule>
    <fullName>StudySpec_required</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Resource__r.Content_Class__c, &quot;Study-Specific&quot;))</errorConditionFormula>
    <errorMessage>Only Study Specific resources can have tied Study.</errorMessage>
</ValidationRule>