force-app/main/default/objects/Res_study__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Clinical_Trial_Profile__c</columns>
    <columns>Resource__c</columns>
    <columns>Visible_To_Participant__c</columns>
    <columns>Visible_In_Alumni__c</columns>
    <columns>Visible_To_Delegates__c</columns>
    <columns>Visible_To_PI__c</columns>
    <columns>Visible_To_RP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>